--- a/src/notes.css
+++ b/src/notes.css
@@ -5,7 +5,8 @@
     background: #cccccc;
 }
 
-.note-app > h1 {
+.note-app > h1,
+.note-prompt {
     text-align: center;
 }
 
@@ -32,7 +33,8 @@
     float: right;
 }
 
-.note-delete-button {
+.note-delete-button,
+.note-prompt:empty {
     display: none;
 }
 
